# python-twentemilieu

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  example.py  mypi.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yaml  issue.yaml
.github/workflows/: ci.yml  codeql.yaml  linting.yaml  release.yaml  scorecard.yml  tests.yaml  typing.yaml
examples/: example.py
meppel_afvalkalender/: __init__.py  __version__.py  const.py  exceptions.py  meppel_afvalkalender.py
src/twentemilieu/: __init__.py  _cli.py  exceptions.py  twentemilieu.py
src/twentemilieu/cli/: __init__.py  async_typer.py  ruff.toml
tests/: __init__.py  conftest.py  test_meppel_afvalkalender.py  test_twentemilieu.py  test_wasteapi.py
tests/__snapshots__/: test_twentemilieu.ambr
tests/cli/: __init__.py  test_cli.py
tests/cli/__snapshots__/: test_cli.ambr
tests/fixtures/: calendar_response.json  empty_pickups.json  sample_pickups.json
twentemilieu/: __init__.py  __version__.py  const.py  exceptions.py  twentemilieu.py
wasteapi/: __init__.py  __version__.py  const.py  exceptions.py  wasteapi.py
