[tool.poetry]
name = "twentemilieu"
version = "0.0.0"
description = "Asynchronous Python client for Twente Milieu API."
authors = ["Franck Nijhof <opensource@frenck.dev>"]
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frenck/python-twentemilieu"
repository = "https://github.com/frenck/python-twentemilieu"
documentation = "https://github.com/frenck/python-twentemilieu"
keywords = ["twente milieu", "afvalkalender", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "twentemilieu", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.0.0"
yarl = ">=1.6.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.6"
black = "^22.6"
blacken-docs = "^1.12.1"
coverage = {version = "^6.4", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
yamllint = "^1.27.1"
pyupgrade = "^2.37.3"
flake8-simplify = "^0.19.3"
vulture = "^2.5"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^2.1.1"
codespell = "^2.1.0"
bandit = "^1.7.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-twentemilieu/issues"
Changelog = "https://github.com/frenck/python-twentemilieu/releases"

[tool.black]
target-version = ['py38']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["twentemilieu"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = 3.9

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false # thanks backoff :(
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# No incremental mode
cache_dir = "/dev/null"

[[tool.mypy.overrides]]
follow_imports = "skip"
module = "mypy-aiohttp.*"

[tool.pylint.MASTER]
ignore= [
  "tests"
]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.empty_comment",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.typing",
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
